tests/errors/func_08.py
from lpython import InOut

def main0(x: In[In[i32]]):
    print(x)
main0()
